tests/src/frontend/typechecking/invalid/pattern_nested_tuple.sk
fun main(): void {
  p = (42, "Fail");
  print_raw(
    p match {
    | (x @ _, y @ _) -> x + y
    },
  )
}
